--- a/lr5/lr5.ipynb
+++ b/lr5/lr5.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "id": "f271ebd5-0728-4dfd-9f5f-0e5a102c3457",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "32c6531b-60ec-4667-a1d3-be3311753b89",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 58,
    "id": "af6e3873-ca3d-4d71-96ba-255d87dc8885",
    "metadata": {},
    "outputs": [],
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 57,
    "id": "6d6704f8-2608-4c6d-b725-18e4e90afcc1",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
     }
    ],
    "source": [
-    "t = Translator('llama3')\n",
+    "t = Translator('gemma3')\n",
     "print(t.translate_elvish_to_english('Aé lyubit gotovit noel ite.'))"
    ]
   },
@@ -525,31 +525,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 59,
    "id": "a13494e7-b2c9-42d3-90c8-c12718439b5c",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "llama3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "for model_name in ('llama3', 'deepseek-r1', 'gemma3'):\n",
+    "def _test_model(model_name: str) -> None:\n",
     "    print(model_name)\n",
     "    translator = Translator(model_name)\n",
     "\n",
@@ -563,31 +544,49 @@
     "        if i % 50 == 0:\n",
     "            print('Часть записей обработана.')\n",
     "\n",
-    "        bleu_scores_russian_to_elvish.append(\n",
-    "            sentence_bleu(\n",
-    "                translator.translate_russian_to_elvish(record[0]), \n",
-    "                record[1],\n",
+    "        try:\n",
+    "            bleu_scores_russian_to_elvish.append(\n",
+    "                sentence_bleu(\n",
+    "                    translator.translate_russian_to_elvish(record[0]), \n",
+    "                    record[1],\n",
+    "                )\n",
     "            )\n",
-    "        )\n",
-    "        bleu_scores_elvish_to_russian.append(\n",
-    "            sentence_bleu(\n",
-    "                translator.translate_elvish_to_russian(record[1]), \n",
-    "                record[0],\n",
-    "            )\n",
-    "        )\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            continue\n",
     "\n",
-    "        bleu_scores_english_to_elvish.append(\n",
-    "            sentence_bleu(\n",
-    "                translator.translate_english_to_elvish(record[2]), \n",
-    "                record[1],\n",
+    "        try:\n",
+    "            bleu_scores_elvish_to_russian.append(\n",
+    "                sentence_bleu(\n",
+    "                    translator.translate_elvish_to_russian(record[1]), \n",
+    "                    record[0],\n",
+    "                )\n",
     "            )\n",
-    "        )\n",
-    "        bleu_scores_elvish_to_english.append(\n",
-    "            sentence_bleu(\n",
-    "                translator.translate_elvish_to_english(record[1]), \n",
-    "                record[2],\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            continue\n",
+    "\n",
+    "        try:\n",
+    "            bleu_scores_english_to_elvish.append(\n",
+    "                sentence_bleu(\n",
+    "                    translator.translate_english_to_elvish(record[2]), \n",
+    "                    record[1],\n",
+    "                )\n",
     "            )\n",
-    "        )\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            continue\n",
+    "\n",
+    "        try:\n",
+    "            bleu_scores_elvish_to_english.append(\n",
+    "                sentence_bleu(\n",
+    "                    translator.translate_elvish_to_english(record[1]), \n",
+    "                    record[2],\n",
+    "                )\n",
+    "            )\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            continue\n",
     "\n",
     "    score = sum(bleu_scores_russian_to_elvish) / len(bleu_scores_russian_to_elvish)\n",
     "    print('Russian-To-Elvish Score:', score)\n",
@@ -604,8 +603,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "id": "191464cb-6d53-4fb9-abb8-2347b17c5d22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "llama3\n",
+      "('А',)\n",
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n",
+      "('S',)\n",
+      "('S',)\n",
+      "Часть записей обработана.\n",
+      "Russian-To-Elvish Score: 1.4081319323328796e-231\n",
+      "Elvish-To-Russian Score: 1.3979871551804934e-231\n",
+      "English-To-Elvish Score: 1.3821330859369786e-231\n",
+      "Elvish-To-English Score: 1.370886268179268e-231\n"
+     ]
+    }
+   ],
+   "source": [
+    "_test_model('llama3')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d83575e7-60c1-4e54-9db7-3278775f429b",
+   "id": "2a6b27e2-1482-431b-9964-d554b9949774",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deepseek-r1\n",
+      "('M',)\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "('T',)\n",
+      "('I',)\n"
+     ]
+    }
+   ],
+   "source": [
+    "_test_model('deepseek-r1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "c69552a3-bc7d-439c-845e-f1b476f642cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gemma3\n",
+      "('A',)\n",
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n",
+      "('I',)\n",
+      "Russian-To-Elvish Score: 1.3956151220093285e-231\n",
+      "Elvish-To-Russian Score: 1.3790497055025017e-231\n",
+      "English-To-Elvish Score: 1.3802689495482624e-231\n",
+      "Elvish-To-English Score: 1.3533990972923734e-231\n"
+     ]
+    }
+   ],
+   "source": [
+    "_test_model('gemma3')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16920e36-15cf-42b9-96e4-0deb3fa8f1f7",
+   "metadata": {},
+   "source": [
+    "Вывод:\n",
+    "llama3 работает лучше всего по метрикам и выдает неплохие ответы.\n",
+    "deepseek-r1 работает очень медленно и выдаёт кривые ответы.\n",
+    "gemma3 работает хуже по метрикам, чем llama3 (из-за того, что пропускает пунктуацию), но зато довольно быстро."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80981691-1754-402a-a0fe-6b5ec360a3e2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -627,7 +718,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
