--- a/lr5/lr5.ipynb
+++ b/lr5/lr5.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5ab7e4b1-0108-40b1-901b-940fb9fb1608",
    "metadata": {},
    "outputs": [],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 27,
    "id": "a13494e7-b2c9-42d3-90c8-c12718439b5c",
    "metadata": {},
    "outputs": [],
@@ -546,7 +546,7 @@
     "\n",
     "        try:\n",
     "            bleu_scores_russian_to_elvish.append(\n",
-    "                sentence_bleu(\n",
+    "                _bleu(\n",
     "                    translator.translate_russian_to_elvish(record[0]), \n",
     "                    record[1],\n",
     "                )\n",
@@ -557,7 +557,7 @@
     "\n",
     "        try:\n",
     "            bleu_scores_elvish_to_russian.append(\n",
-    "                sentence_bleu(\n",
+    "                _bleu(\n",
     "                    translator.translate_elvish_to_russian(record[1]), \n",
     "                    record[0],\n",
     "                )\n",
@@ -568,7 +568,7 @@
     "\n",
     "        try:\n",
     "            bleu_scores_english_to_elvish.append(\n",
-    "                sentence_bleu(\n",
+    "                _bleu(\n",
     "                    translator.translate_english_to_elvish(record[2]), \n",
     "                    record[1],\n",
     "                )\n",
@@ -579,7 +579,7 @@
     "\n",
     "        try:\n",
     "            bleu_scores_elvish_to_english.append(\n",
-    "                sentence_bleu(\n",
+    "                _bleu(\n",
     "                    translator.translate_elvish_to_english(record[1]), \n",
     "                    record[2],\n",
     "                )\n",
@@ -598,31 +598,31 @@
     "    print('English-To-Elvish Score:', score)\n",
     "\n",
     "    score = sum(bleu_scores_elvish_to_english) / len(bleu_scores_elvish_to_english)\n",
-    "    print('Elvish-To-English Score:', score)"
+    "    print('Elvish-To-English Score:', score)\n",
+    "\n",
+    "\n",
+    "def _bleu(first: str, second: str) -> float:\n",
+    "    return sentence_bleu(\n",
+    "        [first.split()],\n",
+    "        second.split(),\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "id": "191464cb-6d53-4fb9-abb8-2347b17c5d22",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "llama3\n",
-      "('А',)\n",
-      "Часть записей обработана.\n",
-      "Часть записей обработана.\n",
-      "Часть записей обработана.\n",
-      "('S',)\n",
-      "('S',)\n",
-      "Часть записей обработана.\n",
-      "Russian-To-Elvish Score: 1.4081319323328796e-231\n",
-      "Elvish-To-Russian Score: 1.3979871551804934e-231\n",
-      "English-To-Elvish Score: 1.3821330859369786e-231\n",
-      "Elvish-To-English Score: 1.370886268179268e-231\n"
+     "ename": "NameError",
+     "evalue": "name '_test_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43m_test_model\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mllama3\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name '_test_model' is not defined"
      ]
     }
    ],
@@ -632,21 +632,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "2a6b27e2-1482-431b-9964-d554b9949774",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deepseek-r1\n",
-      "('M',)\n",
-      "list index out of range\n",
-      "list index out of range\n",
-      "list index out of range\n",
-      "('T',)\n",
-      "('I',)\n"
+     "ename": "NameError",
+     "evalue": "name '_test_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[25], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43m_test_model\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdeepseek-r1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name '_test_model' is not defined"
      ]
     }
    ],
@@ -656,41 +654,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "id": "c69552a3-bc7d-439c-845e-f1b476f642cf",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gemma3\n",
-      "('A',)\n",
-      "Часть записей обработана.\n",
-      "Часть записей обработана.\n",
-      "Часть записей обработана.\n",
-      "Часть записей обработана.\n",
-      "('I',)\n",
-      "Russian-To-Elvish Score: 1.3956151220093285e-231\n",
-      "Elvish-To-Russian Score: 1.3790497055025017e-231\n",
-      "English-To-Elvish Score: 1.3802689495482624e-231\n",
-      "Elvish-To-English Score: 1.3533990972923734e-231\n"
+     "ename": "NameError",
+     "evalue": "name '_test_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43m_test_model\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgemma3\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name '_test_model' is not defined"
      ]
     }
    ],
    "source": [
     "_test_model('gemma3')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16920e36-15cf-42b9-96e4-0deb3fa8f1f7",
-   "metadata": {},
-   "source": [
-    "Вывод:\n",
-    "llama3 работает лучше всего по метрикам и выдает неплохие ответы.\n",
-    "deepseek-r1 работает очень медленно и выдаёт кривые ответы.\n",
-    "gemma3 работает хуже по метрикам, чем llama3 (из-за того, что пропускает пунктуацию), но зато довольно быстро."
    ]
   },
   {
@@ -718,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
