--- a/lr5/lr5.ipynb
+++ b/lr5/lr5.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "5ab7e4b1-0108-40b1-901b-940fb9fb1608",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,10 @@
     "\n",
     "import ollama\n",
     "import nltk\n",
-    "from nltk.translate.bleu_score import sentence_bleu"
+    "from nltk.translate.bleu_score import sentence_bleu\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
   {
@@ -353,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "id": "af6e3873-ca3d-4d71-96ba-255d87dc8885",
    "metadata": {},
    "outputs": [],
@@ -498,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "id": "6d6704f8-2608-4c6d-b725-18e4e90afcc1",
    "metadata": {},
    "outputs": [
@@ -506,7 +509,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I love cooking new food.\n"
+      "I love cooking new foods.\n"
      ]
     }
    ],
@@ -520,33 +523,36 @@
    "id": "22f8d2b1-867d-4730-be38-12c7689b4736",
    "metadata": {},
    "source": [
-    "Начнем тестировать наши модели. Используем метрику BLEU."
+    "Начнем тестировать наши модели. Используем метрику \"косинусное сходство\".\n",
+    "Изначально мы использовали метрику BLEU, но она может давать низкие результаты даже при полном сходстве."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "a13494e7-b2c9-42d3-90c8-c12718439b5c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def _test_model(model_name: str) -> None:\n",
+    "    \"\"\"Прогоняет модель по наборам `sequences` и выводит результаты метрик.\"\"\"\n",
+    "\n",
     "    print(model_name)\n",
     "    translator = Translator(model_name)\n",
     "\n",
-    "    bleu_scores_russian_to_elvish = []\n",
-    "    bleu_scores_elvish_to_russian = []\n",
+    "    russian_to_elvish_scores = []\n",
+    "    elvish_to_russian_scores = []\n",
     "\n",
-    "    bleu_scores_english_to_elvish = []\n",
-    "    bleu_scores_elvish_to_english = []\n",
+    "    english_to_elvish_scores = []\n",
+    "    elvish_to_english_scores = []\n",
     "\n",
     "    for i, record in enumerate(sequences, start=1):\n",
     "        if i % 50 == 0:\n",
     "            print('Часть записей обработана.')\n",
     "\n",
     "        try:\n",
-    "            bleu_scores_russian_to_elvish.append(\n",
-    "                _bleu(\n",
+    "            russian_to_elvish_scores.append(\n",
+    "                _score(\n",
     "                    translator.translate_russian_to_elvish(record[0]), \n",
     "                    record[1],\n",
     "                )\n",
@@ -556,8 +562,8 @@
     "            continue\n",
     "\n",
     "        try:\n",
-    "            bleu_scores_elvish_to_russian.append(\n",
-    "                _bleu(\n",
+    "            elvish_to_russian_scores.append(\n",
+    "                _score(\n",
     "                    translator.translate_elvish_to_russian(record[1]), \n",
     "                    record[0],\n",
     "                )\n",
@@ -567,8 +573,8 @@
     "            continue\n",
     "\n",
     "        try:\n",
-    "            bleu_scores_english_to_elvish.append(\n",
-    "                _bleu(\n",
+    "            english_to_elvish_scores.append(\n",
+    "                _score(\n",
     "                    translator.translate_english_to_elvish(record[2]), \n",
     "                    record[1],\n",
     "                )\n",
@@ -578,8 +584,8 @@
     "            continue\n",
     "\n",
     "        try:\n",
-    "            bleu_scores_elvish_to_english.append(\n",
-    "                _bleu(\n",
+    "            elvish_to_english_scores.append(\n",
+    "                _score(\n",
     "                    translator.translate_elvish_to_english(record[1]), \n",
     "                    record[2],\n",
     "                )\n",
@@ -588,41 +594,50 @@
     "            print(e)\n",
     "            continue\n",
     "\n",
-    "    score = sum(bleu_scores_russian_to_elvish) / len(bleu_scores_russian_to_elvish)\n",
+    "    score = sum(russian_to_elvish_scores) / len(russian_to_elvish_scores)\n",
     "    print('Russian-To-Elvish Score:', score)\n",
     "\n",
-    "    score = sum(bleu_scores_elvish_to_russian) / len(bleu_scores_elvish_to_russian)\n",
+    "    score = sum(elvish_to_russian_scores) / len(elvish_to_russian_scores)\n",
     "    print('Elvish-To-Russian Score:', score)\n",
     "\n",
-    "    score = sum(bleu_scores_english_to_elvish) / len(bleu_scores_english_to_elvish)\n",
+    "    score = sum(english_to_elvish_scores) / len(english_to_elvish_scores)\n",
     "    print('English-To-Elvish Score:', score)\n",
     "\n",
-    "    score = sum(bleu_scores_elvish_to_english) / len(bleu_scores_elvish_to_english)\n",
+    "    score = sum(elvish_to_english_scores) / len(elvish_to_english_scores)\n",
     "    print('Elvish-To-English Score:', score)\n",
     "\n",
     "\n",
-    "def _bleu(first: str, second: str) -> float:\n",
-    "    return sentence_bleu(\n",
-    "        [first.split()],\n",
-    "        second.split(),\n",
-    "    )"
+    "def _score(reference: str, candidate: str) -> float:\n",
+    "    \"\"\"Вычисляет схожесть предложений по методу косинусного сходства.\"\"\"\n",
+    "    \n",
+    "    vectorizer = TfidfVectorizer().fit_transform([reference, candidate])\n",
+    "    vectors = vectorizer.toarray()\n",
+    "\n",
+    "    cosine_sim = cosine_similarity(vectors)\n",
+    "    return cosine_sim[0][1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "191464cb-6d53-4fb9-abb8-2347b17c5d22",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name '_test_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43m_test_model\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mllama3\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name '_test_model' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "llama3\n",
+      "Часть записей обработана.\n",
+      "list index out of range\n",
+      "Часть записей обработана.\n",
+      "list index out of range\n",
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n",
+      "Russian-To-Elvish Score: 0.6324475997709333\n",
+      "Elvish-To-Russian Score: 0.23716010413506708\n",
+      "English-To-Elvish Score: 0.43981619136479694\n",
+      "Elvish-To-English Score: 0.2442163147029207\n"
      ]
     }
    ],
@@ -654,19 +669,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "c69552a3-bc7d-439c-845e-f1b476f642cf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name '_test_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43m_test_model\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgemma3\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name '_test_model' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gemma3\n"
      ]
     }
    ],
@@ -699,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
