--- a/lr5/lr5.ipynb
+++ b/lr5/lr5.ipynb
@@ -647,19 +647,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "2a6b27e2-1482-431b-9964-d554b9949774",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name '_test_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[25], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43m_test_model\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdeepseek-r1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name '_test_model' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deepseek-r1\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "Часть записей обработана.\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "Часть записей обработана.\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "Часть записей обработана.\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "Часть записей обработана.\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "Russian-To-Elvish Score: 0.5604339791861469\n",
+      "Elvish-To-Russian Score: 0.10875606595230548\n",
+      "English-To-Elvish Score: 0.2515466263466837\n",
+      "Elvish-To-English Score: 0.14724111753307612\n"
      ]
     }
    ],
@@ -669,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c69552a3-bc7d-439c-845e-f1b476f642cf",
    "metadata": {},
    "outputs": [
@@ -677,7 +734,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gemma3\n"
+      "gemma3\n",
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n",
+      "Russian-To-Elvish Score: 0.663550826078706\n",
+      "Elvish-To-Russian Score: 0.2523713130492631\n",
+      "English-To-Elvish Score: 0.5609770265560865\n",
+      "Elvish-To-English Score: 0.26187627800026153\n"
      ]
     }
    ],
