--- a/lr5/lr5.ipynb
+++ b/lr5/lr5.ipynb
@@ -751,9 +751,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7519650b-a32e-4173-b1e6-ee2dfa179f06",
+   "metadata": {},
+   "source": [
+    "Выводы:\n",
+    "Вышел следующий топ по метрике косинусного сходства:\n",
+    "- Gemma3\n",
+    "- Llama3\n",
+    "- DeepSeek-r1\n",
+    "\n",
+    "Мы выбираем Gemma3, поскольку она лучше всего справилась по метрикам. Также она меньше всего весит и даёт ответы быстрее остальных двух моделей.\n",
+    "Llama3 - средний вариант.\n",
+    "DeepSeek-r1, как выяснилось, плохо подходит для данной задачи. Он часто даёт кривые ответы, а также работает очень долго (вероятно из-за проработки <think>...</think>).\n",
+    "\n",
+    "Также заметим, что модели лучше справляются по метрикам ...-To-Elvish, а Elvish-To-... везде хуже. Вероятно, это связано с тем, что очень часто одно эльфское слово может переводиться множеством вариантов, а также из-за маленького словаря."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80981691-1754-402a-a0fe-6b5ec360a3e2",
+   "id": "2ba80665-9846-4d5e-aa8c-aa5e6420e1bb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -775,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
