updates + ui began

--- a/lr5/lr5.ipynb
+++ b/lr5/lr5.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "5ab7e4b1-0108-40b1-901b-940fb9fb1608",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "22b4a420-c9a7-4fba-a953-c306550bd2e1",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "f271ebd5-0728-4dfd-9f5f-0e5a102c3457",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
     "    try:\n",
     "        translation = _try_to_find_russian_word_translation(word)\n",
     "    except ValueError:\n",
-    "        for synonym in _synonyms_of_word_from_web_api(word):\n",
+    "        for synonym in synonyms_finding_func(word):\n",
     "            try:\n",
     "                translation = _try_to_find_russian_word_translation(synonym)\n",
     "            except ValueError:\n",
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "32c6531b-60ec-4667-a1d3-be3311753b89",
    "metadata": {},
    "outputs": [
@@ -793,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
