--- a/cv/lr5/lr5.ipynb
+++ b/cv/lr5/lr5.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d50e801f-270e-42ef-9a72-35b92df22fd5",
+   "metadata": {},
+   "source": [
+    "Развернуть нейронную сеть на архитектуре MobileNet, детектирующую объекты на видео. Рекомендуемые технологии - keras + MobileNet (https://keras.io/api/applications/mobilenet/) предобученный на imagenet. В качестве входных данных можно использовать видео-файл или входной поток с вебкамеры. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "84524c01-ba44-4492-99f2-778e557eedd8",
@@ -374,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
